Bug 412334 - Now Playing view no longer shows or updates metadata or lyrics until you manually re-play the current song
Summary: Now Playing view no longer shows or updates metadata or lyrics until you manu...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-25 19:23 UTC by Nate Graham
Modified: 2019-11-22 14:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.0
Sentry Crash Report:


Attachments
Screen recording (2.73 MB, video/webm)
2019-11-21 14:25 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2019-09-25 19:23:36 UTC
Building Elisa from git master. The described regression appears to have been introduced by https://cgit.kde.org/elisa.git/commit/?id=a1ca107d948fff02d4b7e58cb12f1b03843f1e36


STEPS TO REPRODUCE
1. Add some songs to the global playlist and begin playback
2. Go to the Now Playing view


OBSERVED RESULT
The artwork and title appear, but none of the metadata or lyrics.

If you manually restart playback for the current song (e.g. by double-clicking the song in the global playlist) then the missing information will appear.

However, when the current song completes, the metadata and lyrics display in the Now Playing view do not automatically update themselves to show
Comment 1 Matthieu Gallien 2019-09-27 20:23:34 UTC
I will take care of it
Comment 2 Matthieu Gallien 2019-09-27 21:13:13 UTC
Proposed fix https://phabricator.kde.org/D24274
Comment 3 Matthieu Gallien 2019-09-28 07:57:20 UTC
Git commit d8d6d037724269993a7ed9ed3e2b37df2e04fd32 by Matthieu Gallien.
Committed on 28/09/2019 at 07:55.
Pushed by mgallien into branch 'master'.

fix now playing view no longer updating to follow playing track

Summary:
properly initialize the metadata model in now playing view

Test Plan: Now playing view works OK and no warnings are printed in console

Reviewers: #elisa, ngraham, astippich, jguidon

Reviewed By: #elisa, ngraham

Differential Revision: https://phabricator.kde.org/D24274

M  +1    -0    src/elisaapplication.cpp
M  +31   -0    src/manageheaderbar.cpp
M  +27   -0    src/manageheaderbar.h
M  +1    -0    src/qml/ContentView.qml
M  +4    -3    src/qml/ContextView.qml

https://commits.kde.org/elisa/d8d6d037724269993a7ed9ed3e2b37df2e04fd32
Comment 4 Nate Graham 2019-11-21 14:25:55 UTC
Created attachment 124046 [details]
Screen recording

I'm afraid a variant of the issue appears to have returned in 19.12 and git master. I'm attaching a screen recording.
Comment 5 Matthieu Gallien 2019-11-22 06:37:04 UTC
Possible fix for that https://invent.kde.org/kde/elisa/merge_requests/37
Comment 6 Matthieu Gallien 2019-11-22 14:00:13 UTC
Git commit 292b18e1f6789e945f5751f30230df051bb4963f by Matthieu Gallien.
Committed on 22/11/2019 at 06:33.
Pushed by mgallien into branch 'release/19.12'.

bring back a working ContextView

M  +4    -9    src/manageheaderbar.cpp
M  +5    -5    src/manageheaderbar.h
M  +1    -1    src/qml/ContentView.qml
M  +5    -5    src/qml/ContextView.qml

https://invent.kde.org/kde/elisa/commit/292b18e1f6789e945f5751f30230df051bb4963f