fix now playing view no longer updating to follow playing track

Summary:
properly initialize the metadata model in now playing view

BUG: 412334

Test Plan: Now playing view works OK and no warnings are printed in console

Reviewers: #elisa, ngraham, astippich, jguidon

Reviewed By: #elisa, ngraham

Differential Revision: https://phabricator.kde.org/D24274